<?xml version="1.0"?>
<!-- <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?> -->
<package format="2">
  <name>acsense_ros_interfaces</name>
  <version>0.0.1</version>
  <description>ROS1 interfaces for Acbotics AcSense</description>
  <maintainer email="support@acbotics.com">Acbotics Research LLC</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>message_generation</depend>

</package>
